[gd_scene load_steps=5 format=3 uid="uid://3m5itych6nvw"]

[ext_resource type="Script" uid="uid://dmjmjfs5ltwyk" path="res://scripts/main_scene.gd" id="1_w2twt"]
[ext_resource type="PackedScene" uid="uid://dk66vxmpfybp8" path="res://scenes/enemy.tscn" id="2_pw63i"]
[ext_resource type="PackedScene" uid="uid://doond6e2kkys0" path="res://scenes/character.tscn" id="3_7ykc4"]

[sub_resource type="Curve2D" id="Curve2D_7ykc4"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1152, 0, 0, 0, 0, 0, 1152, 648, 0, 0, 0, 0, 1152, 648, 0, 0, 0, 0, 0, 648, 0, 0, 0, 0, 0, 0)
}
point_count = 6

[node name="MainScene" type="Node2D"]
script = ExtResource("1_w2twt")
mob_scene = ExtResource("2_pw63i")

[node name="Player" parent="." instance=ExtResource("3_7ykc4")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_7ykc4")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
